# pulse-roxi

./: pulseox_pubalgs.code-workspace  pyproject.toml  readme.md  requirements.txt
adobe_premiere_scripts/: 3PS export markers.xml  3PS hide all 2nd passes.xml  3PS hide by name not.xml  3PS import disagreement to markers.xml  3PS import videos.xml
adobe_premiere_scripts/project_template/: 3PS breath marking template.prproj
data/results/: 3ps_Re1_all-sessions_20250815-112213_per_trial.csv  3ps_Tr1_all-sessions_20250815-170018_per_trial.csv
notebooks/: 3ps_delete_unused_sub-session_data.ipynb  3ps_export_panel_disagreements.ipynb  3ps_move_latest_sub-session_videos.ipynb  3ps_stratified_randomization.ipynb  BMA_analysis_template.ipynb  bench_analysis_20230807_biopac_placement.ipynb  bench_analysis_20230824_pressure_snr.ipynb  bench_analysis_20231221_philips_monitor_and_chest_accel.ipynb  dataset_eda_capnobase.ipynb  dataset_eda_kapiolani.ipynb  dataset_eda_mimic.ipynb  evaluate_dataset.ipynb  evaluate_dataset_sweep.ipynb  extract.ipynb  heart rate failed example.csv  heart_rate_analysis.ipynb  partial_breaths_posthoc.ipynb  readme.md  riv_error_distributions.ipynb  run_estimate_rr.py  signal_quality.ipynb
ppg2rr/: __init__.py  capnography.py  config.py  evaluate.py  heart_rate.py  import_ppg.py  kalman.py  kalmanf.py  msptd_beat_detector.py  riv_analyses.py  riv_est.py  rr_est.py  signal_quality.py  synthetic_mat_to_parquet.ipynb  util.py
ppg2rr/.ipynb_checkpoints/: riv_est-checkpoint.py  (+2 more)
probrr/: __init__.py  extract.py  sequence.py
tests/: test_capnography.py  test_heart_rate.py  test_import_ppg.py  test_ppg_features.py  test_riv_analyses.py  test_riv_est.py  test_signal_quality.py  test_util.py
wiki/: data dictionary.md  signal quality metrics.md
(+1989 files in other folders)
